[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "skill-graphs"
version = "0.2.0"
description = "A collection of skill graphs for AI agents"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.14"
dependencies = [ ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
skill_graphs = [ "skill_graphs/**" ]

[tool.setuptools.packages.find]
where = [ ".",]
